--- a/css/visit.css
+++ b/css/visit.css
@@ -30,7 +30,3 @@ main p {
 .space-over {
     margin-top: 2rem;
 }
-
-.space-between {
-    margin-top: 1rem;
-}
